# anqui

./: .env  .gitignore  Cargo.toml  Procfile  README.md  Trunk.toml  release-tasks.sh  run.sh
backend/: Cargo.toml
backend/migrations/2022-03-18-000627_create_cards/: up.sql
backend/migrations/2022-03-29-003154_create_users/: up.sql
backend/migrations/2022-04-04-233845_card_and_deck_improvements/: down.sql
backend/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  models.rs  revision.rs  schema.rs
common/: Cargo.toml
common/migrations/2022-03-18-000627_create_cards/: down.sql
common/migrations/2022-03-29-003154_create_users/: down.sql
common/migrations/2022-04-04-233845_card_and_deck_improvements/: up.sql
common/migrations/2022-05-17-234725_revision_length/: down.sql  up.sql
common/migrations/2022-06-07-233847_flip_mode/: down.sql  up.sql
common/src/: lib.rs  models.rs  query_params.rs  schema.rs
frontend/: Cargo.toml  index.html  styles.sass  tailwind.config.js  tailwind.css
frontend/src/: api.rs  cards.rs  decks.rs  emojis.rs  login.rs  main.rs  routes.rs  utils.rs
frontend/src/components/: mod.rs  modal.rs
frontend/src/components/modals/: card_form.rs  deck_form.rs  mod.rs
frontend/src/lib/: api.rs  emojis.rs  mod.rs  models.rs
frontend/src/views/: cards.rs  decks.rs  login.rs  mod.rs  revision.rs
frontend/src/views/cards/: form.rs  mod.rs
frontend/src/views/decks/: detail.rs  list.rs  mod.rs
migrations/2022-03-18-000627_create_cards/: up.sql
src/: main.rs  models.rs  schema.rs
