[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.4"
actix-files = "0.6"
actix-web = "4"
bcrypt = "0.12"
common = { path = "../common/" }
chrono = "0.4"
derive_more = "0.99"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
