[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
log = "0.4.6"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.9"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["DomTokenList"] }
yew = "0.19"
yew-router = "0.16"
